--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "resize any image uploaded and access via Cloudfront CDN",
   "main": "index.js",
   "scripts": {
-    "deploy": "SHARP_IGNORE_GLOBAL_LIBVIPS=1 npm install --arch=x64 --platform=linux --libc=glibc sharp && npx serverless deploy"
+    "deploy": "npm install && rm -rf node_modules/sharp && SHARP_IGNORE_GLOBAL_LIBVIPS=1 npm install --arch=x64 --platform=linux --libc=glibc sharp&& npx serverless deploy"
   },
   "devDependencies": {
     "aws-sdk": "^2.1171.0",
